| Priyanshu |fix min height issue for text area in likho , suno and dekho India

--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -47,7 +47,7 @@
             <div class="row m-0 justify-content-center mb-5 mb-lg-0 mt-5" id="textarea-row">
                 <div class="form-group green-border-focus col-lg-8 col-md-5 col-12 m-0" id="edit-text" style="border-radius:12px">
                     <label><%- __('Add Text') %></label>
-                    <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
+                    <textarea class="form-control edit-area" id="edit" rows="3" style="resize:none"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center d-none" id="thankyou-text">
