--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -57,7 +57,7 @@
                 <div class="form-group green-border-focus col-lg-4 col-md-5 col-12 m-0" id="edit-text">
                     <label><%- __('Your Edit') %></label>
                     <div class="arrow-right"></div>
-                    <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
+                    <textarea class="form-control edit-area" id="edit" rows="3" style="resize:none"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center d-none" id="thankyou-text">
