--- a/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
@@ -48,14 +48,14 @@
                 <div class="form-group col-lg-4 col-md-5 col-12 m-0 edit-text" style="box-shadow:0 0;border:1px solid #bfbfbf;pointer-events:none">
                     <label id="to-label"><%- __('ENGLISH') %></label>
                     <div class="arrow-right"></div>
-                    <textarea class="form-control" id="translate-text" rows="3"></textarea>
+                    <textarea class="form-control" id="translate-text" rows="3" style="resize:none"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 d-none" id="editor-row">
                 <div class="form-group col-lg-8 col-md-8 col-12 m-0 p-0" id="textarea-row">
                     <div class="form-group col-lg-12 col-md-5 col-12 m-0 edit-text" id="edit-text" style="border-radius:12px">
                         <label><%- __('YOUR EDIT') %></label>
-                        <textarea class="form-control edit-area" id="edit" rows="3"></textarea>
+                        <textarea class="form-control edit-area" id="edit" rows="3" style="resize:none"></textarea>
                     </div>
                 </div>
             </div>
