--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -47,7 +47,7 @@
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1" id="editor-row">
                 <div class="form-group green-border-focus col-lg-8 col-md-5 col-12 m-0 text-area" id="edit-text">
-                    <textarea class="form-control edit-area" id="edit" rows="3" placeholder="Start typing here..." style="font-size:32px"></textarea>
+                    <textarea class="form-control edit-area" id="edit" rows="3" placeholder="Start typing here..." style="font-size:32px;resize:none"></textarea>
                 </div>
             </div>
             <div class="row justify-content-center d-none" id="thankyou-text">
