| Priyanshu | fix text labelling on landing page for likho and dekho India

--- a/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/home/home.ejs
@@ -27,7 +27,7 @@
 <%- include('../common/header.ejs',{bolo:"../home.html", suno:"../sunoIndia/home.html",likho:"../likhoIndia/home.html",dekho:"./home.html",path:"../"}); %>
 <div class="container-fluid supreme-container">
     <div class="row">
-        <%- include('../common/moduleIntro.ejs',{name:'DEKHO India',intro:'Help your language by labelling images'}); %>
+        <%- include('../common/moduleIntro.ejs',{name:'Dekho India',intro:'Help your language by labelling images'}); %>
     </div>
     <div class="row">
         <%- include ../common/languageNavBar.ejs %>
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="col-12 col-md-11 col-lg-11 ml-lg-auto p-5 mt-4 text-dark">
             <h2 class="font-wt-900 site-blue lh-5">
-                <%= __('Contributions made to DEKHO India') %>
+                <%= __('Contributions made to Dekho India') %>
             </h2>
             <div class="row mt-5" id="speaker-data">
                 <div class="col-12 col-lg-11 col-md-11">
