--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
@@ -27,13 +27,13 @@
 <%- include('../common/header.ejs',{bolo:"../home.html", suno:"../sunoIndia/home.html",likho:"./home.html",dekho:"../dekhoIndia/home.html",path:"../"}); %>
 <div class="container-fluid supreme-container">
     <div class="row">
-        <%- include('../common/moduleIntro.ejs',{name:'LIKHO India',intro:'Help your language by translating text'}); %>
+        <%- include('../common/moduleIntro.ejs',{name:'Likho India',intro:'Help your language by translating text'}); %>
     </div>
     <div class="row">
         <div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
             <nav class="navbar navbar-expand-lg navbar-light bg-white px-4" id="contribution_lang_navbar">
                 <div class="mx-2">
-                    <%= __('Select the language Pair for voluntary contribution') %>:
+                    <%= __('Select the language pair for voluntary contribution') %>:
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedLanguage" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                 </button>
@@ -43,12 +43,12 @@
                     </div>
                     <div class="col-lg-10 pt-2">
                         <div class="row m-0">
-                        <label class="col-2 text-right mt-2"><%= __('FROM') %>:</label>
+                        <label class="col-2 text-right mt-2"><%= __('FROM ') %>:</label>
                         <select class="col-4 btn dropdown-toggle h6 w-90 rounded" id="from-language" style="height:40px;padding:0;padding:0 10px;border-color:#959595;color:#959595">
 
                         </select>
                         <div class="col-1"></div>
-                        <label class="col-1 text-right mt-2"><%= __('TO') %>:</label>
+                        <label class="col-1 text-right mt-2"><%= __('TO ') %>:</label>
                         <select class="col-4 btn dropdown-toggle h6 w-90 rounded" id="to-language" style="height:40px;padding:0;padding:0 10px;border-color:#959595;color:#959595">
                             <% LANGUAGES.forEach(function(lang) { %>
                                 <option value="<%= lang.value %>">
@@ -68,7 +68,7 @@
     <div class="row">
         <div class="col-12 col-md-11 col-lg-11 ml-lg-auto p-5 mt-4 text-dark">
             <h2 class="font-wt-900 site-blue lh-5">
-                <%= __('Contributions made to LIKHO India') %>
+                <%= __('Contributions made to Likho India') %>
             </h2>
             <div class="row mt-5" id="speaker-data">
                 <div class="col-12 col-lg-11 col-md-11">
