Ayush | Integarte share into footer

--- a/crowdsource-ui/src/views/common/footer.ejs
+++ b/crowdsource-ui/src/views/common/footer.ejs
@@ -4,7 +4,7 @@
             <div class="d-none">
                 <p class="text-muted">Supported by EkStep Foundation (built on <a href="https://sunbird.org/ai">sunbird.org/ai</a>)</p>
             </div>
-            <div class="d-lg-inline-flex justify-content-around mb-2">
+            <div class="d-lg-inline-flex justify-content-around mb-2 ml-5">
                 <div class="py-2 px-16">
                     <a href="<%- `${path}about-us.html`%>">
                         <%= __('About Us') %>
@@ -24,6 +24,27 @@
                     <a href="<%- `${path}feedback.html`%>">
                         <%= __('Feedback') %>
                     </a>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="row justify-content-center mt-2 mb-4 bg-white">
+                    <div class="col-12 mt-3 text-center">
+                        <%= __('Share it with your friends and family') %>
+                    </div>
+                    <div class="col-12 text-center bg-white">
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://boloindia.nplt.in/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+                            <img src="../../img/fb-icon.svg" width="24px" alt="Share on Facebook">
+                        </a><span>&sdot;</span>
+                        <a id="linkedin_share" href="https://www.linkedin.com/shareArticle?mini=true&url=https://boloindia.nplt.in/&title=Bolo India: A crowdsourcing initiative for Indian languages.&summary=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?/&source=" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+                            <img src="../../img/linkedin-icon.svg" width="24px" alt="Share on LinkedIn">
+                        </a><span>&sdot;</span>
+                        <a id="twitter_share" href="https://twitter.com/intent/tweet?text=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?" target="_blank" rel="noopener noreferrer">
+                            <img src="../../img/twitter-icon.svg" width="24px" alt="Share on Twitter">
+                        </a><span>&sdot;</span>
+                        <a id="whatsapp_share" href="https://api.whatsapp.com/send?text=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?" target="_blank" rel="noopener noreferrer">
+                            <img src="../../img/whatsapp.svg" width="32px" alt="Share on Whatsapp">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
