--- a/crowdsource-ui/src/views/common/footer.ejs
+++ b/crowdsource-ui/src/views/common/footer.ejs
@@ -27,11 +27,11 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="row justify-content-center mt-2 mb-4 bg-white">
+                <div class="row justify-content-center mt-2 mb-4">
                     <div class="col-12 mt-3 text-center">
                         <%= __('Share it with your friends and family') %>
                     </div>
-                    <div class="col-12 text-center bg-white">
+                    <div class="col-12 text-center">
                         <a href="https://www.facebook.com/sharer/sharer.php?u=https://boloindia.nplt.in/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
                             <img src="../../img/fb-icon.svg" width="24px" alt="Share on Facebook">
                         </a><span>&sdot;</span>
