--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -138,7 +138,7 @@
             </div>
 
             <div id="myModal" class="modal">
-                <div class="position-relative d-flex m-auto" style="width:80%">
+                <div class="position-relative d-flex m-auto" style="width:80%;top:103px">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                 </div>
