--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/validation/validator-thank-you.ejs
@@ -70,11 +70,11 @@
                 <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
             </div>
             <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('recordings contributed') %></p>
-            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="../badges.html">Know more</a>') %></p>
+            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./badges.html">Know more</a>') %></p>
             <%- include ../common/badge_milestone.ejs %>
             <%- include ../common/sharableLink.ejs %>
             <div class="badges_information">
-                <%- include('../common/downloadableBadges.ejs', {BADGES:["bronze","silver","gold","platinum"]})%>
+                <%- include('../common/downloadableBadges.ejs', {BADGES:["bronze","silver","gold","platinum"],MODULE:"likho"})%>
             </div>
         </div>
     </div>
