--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyou/contribution/thank-you.ejs
@@ -71,7 +71,7 @@
                 <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
             </div>
             <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('recordings contributed') %></p>
-            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="../badges.html">Know more</a>') %></p>
+            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./badges.html">Know more</a>') %></p>
             <%- include ../common/badge_milestone.ejs %>
             <div class="mt-5 text-center">
                 <%= __('Share it with your friends and family') %>
@@ -93,18 +93,7 @@
                 </div>
             </div>
             <div class="badges_information">
-                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="bronze" href="#" id="bronze_badge_link">
-                    <img title="Download Bronze Badge" src="../../img/bronze_badge.svg" alt="" width="36px" class="disable" id="bronze_badge_link_img">
-                </button>
-                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="silver" href="#" id="silver_badge_link">
-                    <img title="Download Silver Badge" src="../../img/silver_badge.svg" alt="" width="36px" class="disable" id="silver_badge_link_img">
-                </button>
-                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="gold" href="#" id="gold_badge_link">
-                    <img title="Download Gold Badge" src="../../img/gold_badge.svg" alt="" width="36px" class="disable" id="gold_badge_link_img">
-                </button>
-                <button class="m-0 p-0 btn border-0" disabled="disabled" data-badge="platinum" href="#" id="platinum_badge_link">
-                    <img title="Download Platinum Badge" src="../../img/platinum_badge.svg" alt="" width="36px" class="disable" id="platinum_badge_link_img">
-                </button>
+                <%- include('../common/downloadableBadges.ejs', {BADGES:["bronze","silver","gold","platinum"], MODULE:"suno"})%>
             </div>
         </div>
     </div>
