Ayush | Fix issue of bolo india tooltip

--- a/crowdsource-ui/src/views/common/footer.ejs
+++ b/crowdsource-ui/src/views/common/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom bg-light pt-3 border-top w-100">
+<footer class="fixed-bottom bg-light pt-3 border-top w-100 mt-4">
     <div class="container-fluid">
         <div class="d-flex flex-column-reverse flex-lg-row justify-content-lg-around align-items-sm-center align-items-md-center text-center">
             <div class="d-none">
