Ayush | Fixed UI for thankyou page

--- a/crowdsource-ui/src/views/common/header/headerWithoutNavBar.ejs
+++ b/crowdsource-ui/src/views/common/header/headerWithoutNavBar.ejs
@@ -13,7 +13,7 @@
             <li class="nav-item p-2 dropdown" id="locale_language_dropdown">
                 <div href="https://inference.vakyansh.in/" class="nav-link text-dark font-weight-bold dropdown-toggle cursor-pointer" id="localeDropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <%= __('Language') %>
-                <p></p></div>
+                </div>
                 <div id="localisation_dropdown" class="dropdown-menu" aria-labelledby="localeDropdownMenuButton"><a id="english" class="dropdown-item" href="#" locale="en">English</a></div>
             
             </li><li class="nav-item p-2"><a href="<%- `${path}about-us.html`%>" class="nav-link text-dark font-weight-bold">
