| Priyanshu | refactor thankyou page of suno,likho and dekho India

--- a/crowdsource-ui/src/views/common/modals/badgesMilestone/badgesMilestone.ejs
+++ b/crowdsource-ui/src/views/common/modals/badgesMilestone/badgesMilestone.ejs
@@ -1,7 +1,7 @@
 <div class="row d-none" id="milestone_text">
     <div class="col-12 col-lg-5 col-md-5 mt-lg-5 justify-content-between">
         <div>
-            <img src="../../img/bronze_badge.svg" alt="Bronze Badge" id="reward-img" class="reward-img">
+            <img src="<%= `../../img/${MODULE}_bronze_badge.svg`%>" alt="Bronze Badge" id="reward-img" class="reward-img">
         </div>
         <p class="mt-2"><%= __('National Language Translation Mission')%></p>
         <button class="btn btn-outline-primary my-2" data-badge="" download id="download_pdf"><span class="mr-2"><%= __('Download')%></span>
