--- a/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
@@ -59,11 +59,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center d-none" id="thankyou-text">
+            <div class="row justify-content-center d-none" id="thank-you-row">
                 <div class="col-12 text-center mt-4">
                     <img src="../../img/tick.svg">
                     <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for
-                        correcting!</label>
+                        validating!</label>
                 </div>
             </div>
 
