--- a/crowdsource-ui/src/views/common/footer.ejs
+++ b/crowdsource-ui/src/views/common/footer.ejs
@@ -27,8 +27,8 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="row justify-content-center mt-2 mb-4">
-                    <div class="col-12 mt-3 text-center">
+                <div class="row justify-content-center mb-2">
+                    <div class="col-12 mt-1 text-center">
                         <%= __('Share it with your friends and family') %>
                     </div>
                     <div class="col-12 text-center">
