--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -86,20 +86,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center my-auto my-3 d-none" id="thank-you-row">
-                <div class="col-md-8 col-sm-10 text-center align-items-center"><label class="h1 font-weight-bold my-5">
-                        <%= __('Thank you for validating!') %>
-                    </label>
-                    <p class="d-none">
-                        <%- __('You have helped us validate <span id="spn-validation-count" class="font-wt-900"></span> recordings') %>
-                    </p>
-                    <div class="row justify-content-center mb-3 mx-2">
-                        <div class="col-lg-4 col-md-4 col-sm-10 oflow-x-hid"></div>
-                        <a class="btn btn-primary h6 shadow rounded mt-4 p-3 my-lg-5 col-lg-4 col-md-4 col-sm-10" href="./validator-page.html">
-                            <%= __('Validate More') %>
-                        </a>
-                        <div class="col-lg-4 col-md-4 col-sm-10 oflow-x-hid"></div>
-                    </div>
+            <div class="row justify-content-center d-none" id="thank-you-row">
+                <div class="col-12 text-center mt-4">
+                    <img src="../../img/tick.svg">
+                    <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for
+                        validating!</label>
                 </div>
             </div>
             <div class="row mt-5 justify-content-center mx-0" id="validation-button-row">
