--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -25,10 +25,10 @@
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
             <%- include ../common/recording-instructions.ejs %>
-            <div class="row position-absolute top-back-btn">
-                <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
-            </div>
-            <div class="modal-footer pt-3 record-btn-container">
+            <div class="modal-footer pt-3 record-btn-container position-relative">
+                <div class="row position-absolute top-back-btn">
+                    <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
+                </div>
                 <%- include ../common/report-btn.ejs %>
                 <%- include ../common/speakerTestBtn.ejs %>
             </div>
