Ayush | Fix back button issue

--- a/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
@@ -25,10 +25,11 @@
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
             <%- include ../common/recording-instructions.ejs %>
-            <div class="row position-absolute top-back-btn">
-                <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
-            </div>
-            <div class="modal-footer pt-3">
+         
+            <div class="modal-footer pt-3 position-relative">
+                <div class="row position-absolute top-back-btn">
+                    <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
+                </div>
                 <%- include ../common/report-btn.ejs %>
             </div>
             <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2 align-items-center">
