| Priyanshu | add page title in header for suno, dekho and likho India

--- a/crowdsource-ui/src/views/modules/dekhoIndia/dashboard/dashboard.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/dashboard/dashboard.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<%- include('../common/headerWithoutNavBar.ejs',{path:"../"}) %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Dekho India", PAGE_TITLE:"Dashboard"}) %>
 <div class="container container-fluid supreme-container">
     <div class="row">
         <div class="col-12">
