| Priyanshu | fix dashboard contribution details issue on suno, likho and dekho India

--- a/crowdsource-ui/src/views/common/contributionStats/contributionStats.ejs
+++ b/crowdsource-ui/src/views/common/contributionStats/contributionStats.ejs
@@ -1,5 +1,5 @@
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/contributionStats.css">
-<div class="contribution-data">
+<div class="contribution-data" id="languages-wrapper">
     <p class="mb-1" id="languages-value"></p>
     <p class="mb-0">
         <%= __(labels[0]) %>
