--- a/crowdsource-ui/src/views/modules/sunoIndia/badges/badge-info.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/badges/badge-info.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<%- include('../common/headerWithoutNavBar.ejs',{path:"./",MODULE:"Suno India", PAGE_TITLE:"Badges"}); %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"./",MODULE:"Suno India", PAGE_TITLE:"Transcribe"}); %>
 <div id="content-wrapper" class="container-fluid pt-5 pb-2 px-3 px-md-5 h-100">
     <div class="row mx-lg-5">
         <div class="col-12">
