--- a/crowdsource-ui/src/views/modules/dekhoIndia/badges/validatorBadgesInfo.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/badges/validatorBadgesInfo.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<%- include('../common/headerWithoutNavBar.ejs',{path:"./",MODULE:"Likho India", PAGE_TITLE:"Translate"}); %>
+<%- include('../common/headerWithoutNavBar.ejs',{path:"./",MODULE:"Dekho India", PAGE_TITLE:"Correct"}); %>
 <div id="content-wrapper" class="container-fluid pt-5 pb-2 px-3 px-md-5 h-100">
     <div class="row mx-lg-5">
         <div class="col-12">
@@ -57,7 +57,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>$("footer").removeClass("fixed-bottom").addClass("bottom")</script>
-<script src="../../js/likhoIndia/badges_info.js"></script>
+<script src="../../js/sunoIndia/badges_info.js"></script>
 
 </body>
 </html>
