--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyou/validation/validator-thank-you.ejs
@@ -30,7 +30,7 @@
             <%- include('../common/back-btn.ejs',{url:"./home.html"}) %>
         </div>
         <h1 class="display-5 font-wt-900 site-blue">
-            <%= __('Thank you for contributing!') %>
+            <%= __('Thank you for validating!') %>
         </h1>
     </div>
     <div class="row mb-5 lazy">
@@ -69,7 +69,7 @@
                 <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
             </div>
             <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('recordings contributed') %></p>
-            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./badges.html">Know more</a>') %></p>
+            <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./validator-badges.html">Know more</a>') %></p>
             <%- include('../common/badgesMilestone.ejs',{MODULE:"suno"}) %>
             <%- include ../common/sharableLink.ejs %>
             <div class="badges_information">
