| Priyanshu |thankyou page and functional page text as per module

--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thank-you.ejs
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-5">
-        <%- include('../common/languageGoal.ejs', {ButtonText:"Contribute More",url:"./record.html"})%>
+        <%- include('../common/languageGoal.ejs', {ButtonText:"Contribute More",url:"./record.html",TEXT:"language"})%>
     </div>
 
 </div>
