--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -34,13 +34,13 @@
             </div>
             <div class="row justify-content-center" id="instructive-msg">
                 <div class="col-12 justify-content-center text-center" style="color:#959595;font-style:italic">
-                    <%- __('Is the text from following image captured correctly?') %>
+                    <%- __('Is the text from the image captured correctly?') %>
                 </div>
             </div>
             <div class="row justify-content-center" id="dekho-image">
                 <div class="col-lg-8 col-md-5 col-12">
                     <%- include ../common/image.ejs %>
-                    <span id="expand-view" class="position-absolute text-muted" style="cursor:pointer;right:16px;font-size:14px;margin-top:5px"> <%= __('Click to open expand view') %></span>
+                    <span id="expand-view" class="position-absolute text-muted" style="cursor:pointer;right:16px;font-size:14px;margin-top:5px"> <%= __('Click to open expanded view') %></span>
                 </div>
             </div>
             <div class="row m-0 justify-content-center mb-5 mb-lg-0 mt-5" id="textarea-row">
