--- a/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/record/record.ejs
@@ -37,7 +37,7 @@
             </div>
             <div class="row justify-content-center" id="instructive-msg">
                 <div class="col-12 justify-content-center text-center" style="color:#959595;font-style:italic">
-                    <%- __('Type the translation of the given sentence') %>
+                    <%- __('Type the translation of the given text') %>
                 </div>
             </div>
             <div class="row justify-content-center mb-5 mb-lg-0 mt-5 mx-1" id="editor-row">
