--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
@@ -81,7 +81,7 @@
         <div class="col-12 col-md-11 col-lg-11 p-5 ml-lg-auto">
             <div id="bar_charts_container">
                 <h4 class="h4 mb-4">
-                    <%= __('Your language and top 3 most contributed languages') %>
+                    <%= __('Your language pair and top 3 most contributed language pairs') %>
                 </h4>
                 <div class="d-flex mb-3">
                     <div name="topLanguageChart" id="hours_chart" value="hours">
