--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/validation/validator-thank-you.ejs
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-5">
-        <%- include('../common/languageGoal.ejs', {ButtonText:"Validate More",url:"./validator-page.html"})%>
+        <%- include('../common/languageGoal.ejs', {ButtonText:"Validate More",url:"./validator-page.html", TEXT:"language pair"})%>
     </div>
 
 </div>
