--- a/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/record/record.ejs
@@ -37,7 +37,7 @@
             </div>
             <div class="row" id="instructive-msg">
                 <div class="col-12 justify-content-center text-center">
-                    <%- __('Type in the text as you hear it from the following Audio') %>
+                    <%- __('Type the text as you hear the audio') %>
                 </div>
             </div>
             <div class="row justify-content-center mt-lg-3 mt-1" id="audio-row">
