--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyou/contribution/thank-you.ejs
@@ -80,14 +80,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-5">
-        <div class="col-lg-3 col-md-6 col-8 text-center">
-            <div class="mb-3">
-                <span><%- __('Help your language achieve it’s goal of <span id="language-hour-goal"></span> hrs. We know you can do more!') %></span>
-            </div>
-            <a href="./record.html" class="btn btn-primary btn-lg h6 w-100">
-                <%= __('Contribute More') %>
-            </a>
-        </div>
+        <%- include('../common/languageGoal.ejs', {ButtonText:"Contribute More",url:"./record.html",TEXT:"language"})%>
     </div>
 
 </div>
