--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -36,7 +36,7 @@
             </div>
             <div class="row" id="instructive-msg">
                 <div class="col-12 justify-content-center text-center">
-                    <%- __('Does the audio match the sentence?') %>
+                    <%- __('Does the audio match the text?') %>
                 </div>
             </div>
             <div class="row justify-content-center mt-lg-3 mt-1" id="audio-row">
