Ayush | Add no drop cursor on disbaled card

--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.css
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.css
@@ -368,8 +368,14 @@ body.modal-open .supreme-container {
 
 .validate-disabled {
   opacity: 0.6;
+  cursor: no-drop;
+}
+
+.validate-disabled #left_container,
+.validate-disabled #right_container {
   pointer-events: none;
 }
+
 
 .validate-disabled #warning-msg {
   display: block !important;
