| Priyanshu |fix labels for thankyou msg on submit

--- a/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/record/record.ejs
@@ -55,12 +55,9 @@
                 <div class="col-12 text-center mt-4">
                     <img src="../../img/tick.svg">
                     <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for
-                        correcting!</label>
+                        contributing!</label>
                 </div>
             </div>
-
-
-
             <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
                 <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-bold">
                         <%= __('Thank you for your enthusiasm to transcribe the sentences.') %>
